# LENS

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: bump-and-release.yml  ci.yml  docker.yml  docs.yml  release.yml
config/: lens_rubric.json  roles.json
config/role_profiles/: bedside_nurse.json  physician.json  triage_nurse.json
data/phase1/: README.md
data/phase2/: README.md
data/questionnaire/: README.md
docs/: index.md  phase1_experiment_reproduction.md  phase2_experiment_reproduction.md  source_grounded_phase2.md
docs/api/: cli.md  config.md  llm_scoring.md  orchestrator.md  scoring.md  validation.md
grading_pipeline/: __init__.py  __main__.py  cli.py  config.py  llm_scoring.py  openai_client.py  orchestrator.py  scoring.py  validation.py
reports/cli_sensitivity_experiment/: summary.csv
reports/phase1/: README.md  comparison_summary.csv  comparison_summary.md
reports/phase1_audit/: phase1_audit_report.md  phase1_audit_summary.csv
schemas/: agent_output.schema.json  agent_output_source_grounded.schema.json  source_packet.schema.json
scripts/: __init__.py  audit_phase1_results.py  create_source_packet_template.py  generate_phase1_visuals.py  generate_phase2_ablation_visuals.py  run_cli_sensitivity_experiment.py  run_source_grounded_benchmark.py
tests/: test_cli_experiment_parsers.py  test_cli_input_validation.py  test_llm_scoring.py  test_openai_client.py  test_orchestrator.py  test_runtime_config.py  test_source_grounded_benchmark.py  test_source_packets.py
(+54 files in other folders)
