[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edlens"
version = "0.1.0"
description = "Role-aware multi-agent grading pipeline for clinical ED handoff summaries"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
lens = "grading_pipeline.cli:main"

[project.optional-dependencies]
dev = ["pytest"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]

[tool.hatch.build.targets.sdist]
include = ["src/grading_pipeline", "config", "schemas"]

[tool.hatch.build.targets.wheel]
packages = ["src/grading_pipeline"]

[tool.hatch.build.targets.wheel.force-include]
"src/grading_pipeline/defaults" = "grading_pipeline/defaults"
